--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "hello": "Hello",
   "welcome to": "Welcome to",
-  "includes features": "is a zero-config Vue3 template, it includes these feature：",
+  "includes features": "is a zero-config Vue3 template, it includes these feature:",
   "before coding": "Before coding",
   "setup ide": "I recommended your IDE setup",
   "home": "Home",
@@ -9,5 +9,12 @@
   "change dark": "Click to switch to dark theme",
   "change lang": "Switch languages",
   "method to using": "Method of using template",
-  "template process": "Template configuration process"
+  "template process": "Template configuration process",
+  "exception": {
+    "not_found": "Page not found",
+    "not_found_sub": "The page you were looking for doesn't exist!"
+  },
+  "global": {
+    "back": "Back"
+  }
 }
